fixup! fix(filter-drp): update spacing tokens and fix test

--- a/packages/components/src/FilterDateRangePicker/subcomponents/FilterDateRangePickerField/FilterDateRangePickerField.module.scss
+++ b/packages/components/src/FilterDateRangePicker/subcomponents/FilterDateRangePickerField/FilterDateRangePickerField.module.scss
@@ -5,5 +5,5 @@
 }
 
 .dateRangeInputField {
-  margin-bottom: $spacing-md;
+  margin-bottom: $spacing-24;
 }
